; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_i5000_edac.c_i5000_get_dimm_and_channel_counts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_i5000_edac.c_i5000_get_dimm_and_channel_counts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }

@MAXDIMMPERCH = common dso_local global i32 0, align 4
@MAXCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_dev*, i32*, i32*)* @i5000_get_dimm_and_channel_counts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i5000_get_dimm_and_channel_counts(%struct.pci_dev* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.pci_dev*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %9 = load i32, i32* @MAXDIMMPERCH, align 4
  %10 = call i32 @pci_read_config_byte(%struct.pci_dev* %8, i32 %9, i64* %7)
  %11 = load i64, i64* %7, align 8
  %12 = trunc i64 %11 to i32
  %13 = mul nsw i32 %12, 2
  %14 = load i32*, i32** %5, align 8
  store i32 %13, i32* %14, align 4
  %15 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %16 = load i32, i32* @MAXCH, align 4
  %17 = call i32 @pci_read_config_byte(%struct.pci_dev* %15, i32 %16, i64* %7)
  %18 = load i64, i64* %7, align 8
  %19 = trunc i64 %18 to i32
  %20 = load i32*, i32** %6, align 8
  store i32 %19, i32* %20, align 4
  ret void
}

declare dso_local i32 @pci_read_config_byte(%struct.pci_dev*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
